--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,19 @@
+# Streamlit配置文件
+# 用于服务器部署时的配置
+
 [server]
-headless = true
 port = 8501
-address = "127.0.0.1"
+address = "0.0.0.0"
+headless = true
 enableCORS = false
-enableXsrfProtection = false
+enableXsrfProtection = true
+
+[browser]
+gatherUsageStats = false
+
+[theme]
+primaryColor = "#FF4B4B"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
+font = "sans serif"
